# testing-repo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
emails-project/: corrections_analysis.md  emails project.txt  pdf_pattern_analysis.md
src/: __init__.py  example.py  pdf_pattern_analyzer.py
tests/: test_example.py  test_pdf_pattern_analyzer.py  test_pdf_pattern_date_conversion.py
